Structure de la barre de navigation

--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
   </head>
 
   <body>
+    <header>
+      <nav>
+        <div class="title__header">Kwon <span>Gee</span></div>
+
+        <div>
+          <ul class="nav__list">
+            <li><a href="#" class="nav__link">Acceuil</a></li>
+            <li><a href="#" class="nav__link">A propos</a></li>
+            <li><a href="#" class="nav__link">Projets</a></li>
+            <li><a href="#" class="nav__link">Compétences</a></li>
+            <li><a href="#" class="nav__link">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+
     <script src="assets/js/app.js"></script>
   </body>
 </html>
