ajout de la classe header dans la balise header et la classe active dans le premier lien de navigation

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   </head>
 
   <body>
-    <header>
-      <nav>
+    <header class="header">
+      <nav class="nav__header">
         <div class="title__header">Kwon <span>Gee</span></div>
 
         <div>
           <ul class="nav__list">
-            <li><a href="#" class="nav__link">Acceuil</a></li>
+            <li><a href="#" class="nav__link active">Acceuil</a></li>
             <li><a href="#" class="nav__link">A propos</a></li>
             <li><a href="#" class="nav__link">Projets</a></li>
             <li><a href="#" class="nav__link">Compétences</a></li>
