Creation de la section hero

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.min.css"
     />
+
     <!-- CSS -->
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Portofolio</title>
@@ -21,11 +22,21 @@
 
         <div>
           <ul class="nav__list">
-            <li><a href="#" class="nav__link active">Acceuil</a></li>
-            <li><a href="#" class="nav__link">A propos</a></li>
-            <li><a href="#" class="nav__link">Projets</a></li>
-            <li><a href="#" class="nav__link">Compétences</a></li>
-            <li><a href="#" class="nav__link">Contact</a></li>
+            <li>
+              <a href="#" class="nav__link active">Acceuil</a>
+            </li>
+            <li>
+              <a href="#" class="nav__link">A propos</a>
+            </li>
+            <li>
+              <a href="#" class="nav__link">Projets</a>
+            </li>
+            <li>
+              <a href="#" class="nav__link">Compétences</a>
+            </li>
+            <li>
+              <a href="#" class="nav__link">Contact</a>
+            </li>
           </ul>
 
           <!-- Button Fermer -->
@@ -40,6 +51,38 @@
         </div>
       </nav>
     </header>
+
+    <main>
+      <section class="hero__section">
+        <div class="hero__presentation">
+          <h1>
+            Salut ! <br />Je suis <span>Kwon Gee Prosper</span>,<br />Etudiant
+            en
+            <span
+              >conception de sytèmes <br />
+              d'information</span
+            >
+          </h1>
+
+          <small
+            >Passionné de développement web et de design UI/UX, <br />Je crée
+            des expériences digitales intuitives et esthétiques.</small
+          >
+
+          <div class="social__hero">
+            <i class="ri-linkedin-fill"></i>
+            <i class="ri-github-fill"></i>
+            <i class="ri-whatsapp-line"></i>
+          </div>
+        </div>
+
+        <div class="shape__hero">
+          <div class="image__shape__hero">
+            <img src="assets/images/InShot_20250318_121930139.png" alt="" />
+          </div>
+        </div>
+      </section>
+    </main>
 
     <script src="assets/js/app.js"></script>
   </body>
