Ajout d'une partie shape__hero dans la section hero__section

--- a/index.html
+++ b/index.html
@@ -65,20 +65,26 @@
           </h1>
 
           <small
-            >Passionné de développement web et de design UI/UX, <br />Je crée
+            >Passionné du développement web et du UI/UX design, <br />Je crée
             des expériences digitales intuitives et esthétiques.</small
-          >
+          ><br />
 
-          <div class="social__hero">
-            <i class="ri-linkedin-fill"></i>
-            <i class="ri-github-fill"></i>
-            <i class="ri-whatsapp-line"></i>
-          </div>
+          <!-- <div class="social__hero">
+            <a href="#"><i class="ri-linkedin-fill"></i></a>
+            <a href="#"><i class="ri-github-fill"></i></a>
+            <a href="#"><i class="ri-whatsapp-line"></i></a>
+          </div> -->
+
+          <button><a href="#" class="btn__hero">Mes projets</a></button>
         </div>
 
         <div class="shape__hero">
           <div class="image__shape__hero">
-            <img src="assets/images/InShot_20250318_121930139.png" alt="" />
+            <img
+              src="assets/images/InShot_20250318_121930139.png"
+              class="image__hero"
+              alt=""
+            />
           </div>
         </div>
       </section>
