Ajout de media social dans la section hero

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <header class="header">
       <nav class="nav__header">
-        <a href="#" class="title__header">Kwon <span>Gee</span></a>
+        <a href="#" class="title__header">Kwon <span>Gee.</span></a>
 
         <div>
           <ul class="nav__list">
@@ -69,13 +69,21 @@
             des expériences digitales intuitives et esthétiques.</small
           ><br />
 
-          <!-- <div class="social__hero">
+          <div class="social__hero">
             <a href="#"><i class="ri-linkedin-fill"></i></a>
-            <a href="#"><i class="ri-github-fill"></i></a>
-            <a href="#"><i class="ri-whatsapp-line"></i></a>
-          </div> -->
+            <a href="#" class="link__social__2"
+              ><i class="ri-github-fill"></i
+            ></a>
+            <a href="#" class="link__social__3"
+              ><i class="ri-whatsapp-line"></i
+            ></a>
+          </div>
 
-          <button><a href="#" class="btn__hero">Mes projets</a></button>
+          <button>
+            <a href="#" class="btn__hero"
+              >Voir mes projets <i class="ri-scroll-to-bottom-line"></i
+            ></a>
+          </button>
         </div>
 
         <div class="shape__hero">
