Structrure de la section Apropos

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <a href="#" class="nav__link active">Acceuil</a>
             </li>
             <li>
-              <a href="#" class="nav__link">A propos</a>
+              <a href="#apropos" class="nav__link">A propos</a>
             </li>
             <li>
               <a href="#" class="nav__link">Projets</a>
@@ -93,6 +93,40 @@
               class="image__hero"
               alt=""
             />
+          </div>
+        </div>
+      </section>
+
+      <section class="apropos__section" id="apropos">
+        <div class="container__apropos__section">
+          <div class="shape__apropos">
+            <div class="image__shape__apropos">
+              <img src="assets/images/1742296689882.jpg" alt="" />
+            </div>
+          </div>
+
+          <div class="apropos__description">
+            <p>
+              Développeur en devenir et passionné par le
+              <span>UI/UX design</span>, je façonne des expériences web qui
+              allient esthétique et performance. Etudiant en conception de
+              systèmes d'information, je me spécialise dans la création
+              d'interfaces intuitives et modernes.
+            </p>
+
+            <p>
+              Toujours en quête d'apprentissage, j'explore les dernières
+              technologies pour concevoir des solutions innovantes et
+              optimisées. Mon objectif est simple :
+              <span
+                >transformer des idées en projets concrets, fonctionnels et
+                visuellement impactants.</span
+              >
+            </p>
+
+            <button>
+              <a href="" class="btn-download">Télécharger CV</a>
+            </button>
           </div>
         </div>
       </section>
