Ajout du button btn__apropos dans la section apropos

--- a/index.html
+++ b/index.html
@@ -109,23 +109,28 @@
             <p>
               Développeur en devenir et passionné par le
               <span>UI/UX design</span>, je façonne des expériences web qui
-              allient esthétique et performance. Etudiant en conception de
-              systèmes d'information, je me spécialise dans la création
-              d'interfaces intuitives et modernes.
+              allient esthétique et performance. <br />
+              Etudiant en conception de systèmes d'information, je me spécialise
+              dans la création d'interfaces intuitives et modernes.
             </p>
-
+            <br />
             <p>
               Toujours en quête d'apprentissage, j'explore les dernières
               technologies pour concevoir des solutions innovantes et
-              optimisées. Mon objectif est simple :
+              optimisées. <br />
+              Mon objectif est simple :
               <span
-                >transformer des idées en projets concrets, fonctionnels et
-                visuellement impactants.</span
+                ><em
+                  >transformer des idées en projets concrets, fonctionnels et
+                  visuellement impactants.</em
+                ></span
               >
             </p>
 
             <button>
-              <a href="" class="btn-download">Télécharger CV</a>
+              <a href="" class="btn__apropos"
+                >Télécharger cv <i class="ri-file-download-line"></i
+              ></a>
             </button>
           </div>
         </div>
