Mise en place de la structure de la section Projets

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <a href="#apropos" class="nav__link">A propos</a>
             </li>
             <li>
-              <a href="#" class="nav__link">Projets</a>
+              <a href="#projets" class="nav__link">Projets</a>
             </li>
             <li>
               <a href="#" class="nav__link">Compétences</a>
@@ -132,6 +132,62 @@
                 >Télécharger cv <i class="ri-file-download-line"></i
               ></a>
             </button>
+          </div>
+        </div>
+      </section>
+
+      <section class="projets__section" id="projets">
+        <div class="card__projets__1">
+          <div class="head__card__projets__1">
+            <img
+              src="assets/images/projets/portfolio.png"
+              alt="interface site web portfolio"
+            />
+          </div>
+
+          <div class="body__card__projets__1">
+            <p class="body__card__projets__1__description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
+              eos illum non sequi doloremque, laudantium quaerat, aliquid
+              molestias ut provident laboriosam repellendus eius aperiam veniam?
+            </p>
+            <button><a href="#" class="btn__projets">Voir le projet</a></button>
+          </div>
+        </div>
+
+        <div class="card__projets__2">
+          <div class="head__card__projets__2">
+            <img
+              src="assets/images/projets/responsive website coffee.png"
+              alt="interface site web portfolio"
+            />
+          </div>
+
+          <div class="body__card__projets__2">
+            <p class="body__card__projets__2__description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
+              eos illum non sequi doloremque, laudantium quaerat, aliquid
+              molestias ut provident laboriosam repellendus eius aperiam veniam?
+            </p>
+            <button><a href="#" class="btn__projets">Voir le projet</a></button>
+          </div>
+        </div>
+
+        <div class="card__projets__3">
+          <div class="head__card__projets__3">
+            <img
+              src="assets/images/projets/todolist.png"
+              alt="interface site web portfolio"
+            />
+          </div>
+
+          <div class="body__card__projets__3">
+            <p class="body__card__projets__3__description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
+              eos illum non sequi doloremque, laudantium quaerat, aliquid
+              molestias ut provident laboriosam repellendus eius aperiam veniam?
+            </p>
+            <button><a href="#" class="btn__projets">Voir le projet</a></button>
           </div>
         </div>
       </section>
