Reorganisation de la structure de la section Skills

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <a href="#projets" class="nav__link">Projets</a>
             </li>
             <li>
-              <a href="#" class="nav__link">Compétences</a>
+              <a href="#skills" class="nav__link">Compétences</a>
             </li>
             <li>
               <a href="#" class="nav__link">Contact</a>
@@ -107,7 +107,7 @@
 
           <div class="apropos__description">
             <p>
-              Développeur en devenir et passionné par le
+              Développeur web <span>Front - end</span> et passionné par le
               <span>UI/UX design</span>, je façonne des expériences web qui
               allient esthétique et performance. <br />
               Etudiant en conception de systèmes d'information, je me spécialise
@@ -129,7 +129,7 @@
 
             <button>
               <a href="" class="btn__apropos"
-                >Télécharger cv <i class="ri-file-download-line"></i
+                >Télécharger cv <i class="ri-download-2-line"></i
               ></a>
             </button>
           </div>
@@ -151,7 +151,24 @@
               eos illum non sequi doloremque, laudantium quaerat, aliquid
               molestias ut provident laboriosam repellendus eius aperiam veniam?
             </p>
-            <button><a href="#" class="btn__projets">Voir le projet</a></button>
+
+            <div class="tecno">
+              <div>
+                <p>Téchonologie :</p>
+              </div>
+
+              <div class="tecno__logo">
+                <i class="ri-html5-fill"></i>
+                <i class="ri-css3-fill"></i>
+                <i class="ri-javascript-fill"></i>
+              </div>
+            </div>
+
+            <button>
+              <a href="#" class="btn__projets"
+                >Voir le projet <i class="ri-eye-line"></i
+              ></a>
+            </button>
           </div>
         </div>
 
@@ -169,7 +186,24 @@
               eos illum non sequi doloremque, laudantium quaerat, aliquid
               molestias ut provident laboriosam repellendus eius aperiam veniam?
             </p>
-            <button><a href="#" class="btn__projets">Voir le projet</a></button>
+
+            <div class="tecno">
+              <div>
+                <p>Téchonologie :</p>
+              </div>
+
+              <div class="tecno__logo">
+                <i class="ri-html5-fill"></i>
+                <i class="ri-css3-fill"></i>
+                <i class="ri-javascript-fill"></i>
+              </div>
+            </div>
+
+            <button>
+              <a href="#" class="btn__projets"
+                >Voir le projet <i class="ri-eye-line"></i
+              ></a>
+            </button>
           </div>
         </div>
 
@@ -187,7 +221,126 @@
               eos illum non sequi doloremque, laudantium quaerat, aliquid
               molestias ut provident laboriosam repellendus eius aperiam veniam?
             </p>
-            <button><a href="#" class="btn__projets">Voir le projet</a></button>
+
+            <div class="tecno">
+              <div>
+                <p>Téchonologie :</p>
+              </div>
+
+              <div class="tecno__logo">
+                <i class="ri-html5-fill"></i>
+                <i class="ri-css3-fill"></i>
+                <i class="ri-javascript-fill"></i>
+              </div>
+            </div>
+
+            <button>
+              <a href="#" class="btn__projets"
+                >Voir le projet <i class="ri-eye-line"></i
+              ></a>
+            </button>
+          </div>
+        </div>
+      </section>
+
+      <section class="skills__section" id="skills">
+        <div class="container__skills__section">
+          <div class="hard__skills">
+            <h2>Hard Skills</h2>
+
+            <div class="hard__skill__1">
+              <div class="title__skill__1">
+                <p>HTML</p>
+              </div>
+
+              <div class="progress__bar__skill__1">
+                <div class="color__progress__bar__skill__1"></div>
+              </div>
+            </div>
+
+            <div class="hard__skill__2">
+              <div class="title__skill__2">
+                <p>CSS</p>
+              </div>
+
+              <div class="progress__bar__skill__2">
+                <div class="color__progress__bar__skill__2"></div>
+              </div>
+            </div>
+
+            <div class="hard__skill__3">
+              <div class="title__skill__3">
+                <p>JAVASCRIPT</p>
+              </div>
+
+              <div class="progress__bar__skill__3">
+                <div class="color__progress__bar__skill__3"></div>
+              </div>
+            </div>
+
+            <div class="hard__skill__4">
+              <div class="title__skill__4">
+                <p>TYPESCRIPT</p>
+              </div>
+
+              <div class="progress__bar__skill__4">
+                <div class="color__progress__bar__skill__4"></div>
+              </div>
+            </div>
+
+            <div class="hard__skill__5">
+              <div class="title__skill__5">
+                <p>BOOTSTRAP</p>
+              </div>
+
+              <div class="progress__bar__skill__5">
+                <div class="color__progress__bar__skill__5"></div>
+              </div>
+            </div>
+
+            <div class="hard__skill__6">
+              <div class="title__skill__6">
+                <p>GIT & GITHUB</p>
+              </div>
+
+              <div class="progress__bar__skill__6">
+                <div class="color__progress__bar__skill__6"></div>
+              </div>
+            </div>
+          </div>
+
+          <div class="soft__skills">
+            <h2>Soft Skills</h2>
+
+            <div class="soft__skill__1">
+              <div class="title__skill__1">
+                <p>Gestion de projet</p>
+              </div>
+
+              <div class="progress__bar__skill__1">
+                <div class="color__soft__progress__bar__skill__1"></div>
+              </div>
+            </div>
+
+            <div class="soft__skill__2">
+              <div class="title__skill__2">
+                <p>Résolution de problème</p>
+              </div>
+
+              <div class="progress__bar__skill__2">
+                <div class="color__soft__progress__bar__skill__2"></div>
+              </div>
+            </div>
+
+            <div class="soft__skill__3">
+              <div class="title__skill__3">
+                <p>Adaptabilité</p>
+              </div>
+
+              <div class="progress__bar__skill__3">
+                <div class="color__soft__progress__bar__skill__3"></div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
