--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <a href="#skills" class="nav__link">Compétences</a>
             </li>
             <li>
-              <a href="#" class="nav__link">Contact</a>
+              <a href="#contact" class="nav__link">Contact</a>
             </li>
           </ul>
 
@@ -342,6 +342,54 @@
               </div>
             </div>
           </div>
+        </div>
+      </section>
+
+      <section class="contact__section" id="contact">
+        <div class="formulaire">
+          <form action="" id="form">
+            <label for="nom">Nom</label>
+            <input
+              type="text"
+              placeholder="Entrez votre nom"
+              id="nom"
+              required
+            />
+
+            <label for="prenom">Prenom</label>
+            <input
+              type="text"
+              placeholder="Entrez votre prenom"
+              id="prenom"
+              required
+            />
+
+            <label for="email">Prenom</label>
+            <input
+              type="email"
+              placeholder="pkwongee@gmail.com"
+              id="email"
+              required
+            />
+
+            <label for="sujet">Sujet</label>
+            <input
+              type="text"
+              placeholder="Entrez le sujet de votre message"
+              id="sujet"
+              required
+            />
+
+            <textarea
+              name="message"
+              id="message"
+              rows="5"
+              cols="40"
+              placeholder="Ecrivez votre message"
+            ></textarea>
+
+            <button type="submit">Envoyer</button>
+          </form>
         </div>
       </section>
     </main>
