Ajout d'un titre pour la section Contact et des media sociaux

--- a/index.html
+++ b/index.html
@@ -347,6 +347,18 @@
 
       <section class="contact__section" id="contact">
         <div class="formulaire">
+          <h2>CONTACTEZ - <span>MO!!!</span></h2>
+
+          <div class="social__contact">
+            <a href="#"><i class="ri-linkedin-fill"></i></a>
+            <a href="#" class="link__social__2"
+              ><i class="ri-github-fill"></i
+            ></a>
+            <a href="#" class="link__social__3"
+              ><i class="ri-whatsapp-line"></i
+            ></a>
+          </div>
+
           <form action="" id="form">
             <label for="nom">Nom</label>
             <input
@@ -380,10 +392,11 @@
               required
             />
 
+            <label for="message">Message</label>
             <textarea
               name="message"
               id="message"
-              rows="5"
+              rows="10"
               cols="40"
               placeholder="Ecrivez votre message"
             ></textarea>
