--- a/index.html
+++ b/index.html
@@ -407,6 +407,10 @@
       </section>
     </main>
 
+    <footer>
+      <div>&copyKwon Gee Prosper - Tout droit réservé</div>
+    </footer>
+
     <script src="assets/js/app.js"></script>
   </body>
 </html>
