--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <header class="header">
       <nav class="nav__header">
-        <a href="#" class="title__header">Kwon <span>Gee.</span></a>
+        <a href="#acceuil" class="title__header">Kwon <span>Gee.</span></a>
 
         <div>
           <ul class="nav__list">
@@ -39,15 +39,15 @@
             </li>
           </ul>
 
-          <!-- Button Fermer -->
-          <div class="nav__close" id="nav-close">
-            <i class="ri-close-large-line"></i>
+          <!-- Button Toggle -->
+          <div class="nav__toggle" id="nav-toggle">
+            <i class="ri-menu-3-fill"></i>
           </div>
         </div>
 
-        <!-- Button Toggle -->
-        <div class="nav__toggle" id="nav-toggle">
-          <i class="ri-menu-3-fill"></i>
+        <!-- Button Fermer -->
+        <div class="nav__close" id="nav-close">
+          <i class="ri-close-large-line"></i>
         </div>
       </nav>
     </header>
@@ -353,7 +353,7 @@
 
       <section class="contact__section" id="contact">
         <div class="formulaire">
-          <h2>CONTACTEZ - <span>MO!!!</span></h2>
+          <h2>CONTACTEZ - <span>MOI!!!</span></h2>
 
           <div class="social__contact">
             <a href="#"><i class="ri-linkedin-fill"></i></a>
