--- a/index.html
+++ b/index.html
@@ -128,7 +128,10 @@
             </p>
 
             <button>
-              <a href="" class="btn__apropos"
+              <a
+                href="assets/pdf/Kwon Gee  CV.pdf"
+                download="Kwon Gee CV.pdf"
+                class="btn__apropos"
                 >Télécharger cv <i class="ri-download-2-line"></i
               ></a>
             </button>
