ajout des differents liens

--- a/index.html
+++ b/index.html
@@ -70,11 +70,19 @@
           ><br />
 
           <div class="social__hero">
-            <a href="#"><i class="ri-linkedin-fill"></i></a>
-            <a href="#" class="link__social__2"
+            <a
+              href="https://github.com/KwonGee-Lukelo"
+              target="_blank"
+              class="link__social__2"
               ><i class="ri-github-fill"></i
             ></a>
-            <a href="#" class="link__social__3"
+            <a href="in/prosper-kwon-gee-59932b29a" target="_blank"
+              ><i class="ri-linkedin-fill"></i
+            ></a>
+            <a
+              href="https://wa.me/243826002323"
+              class="link__social__3"
+              target="_blank"
               ><i class="ri-whatsapp-line"></i
             ></a>
           </div>
@@ -168,7 +176,10 @@
             </div>
 
             <button>
-              <a href="#" class="btn__projets"
+              <a
+                href="https://site-vitrine-massy-b.vercel.app/"
+                target="_blank"
+                class="btn__projets"
                 >Voir le projet <i class="ri-eye-line"></i
               ></a>
             </button>
@@ -203,7 +214,10 @@
             </div>
 
             <button>
-              <a href="#" class="btn__projets"
+              <a
+                href="https://cafe-shop-mu.vercel.app/"
+                target="_blank"
+                class="btn__projets"
                 >Voir le projet <i class="ri-eye-line"></i
               ></a>
             </button>
@@ -238,7 +252,10 @@
             </div>
 
             <button>
-              <a href="#" class="btn__projets"
+              <a
+                href="https://github.com/KwonGee-Lukelo/TodoList-js"
+                target="_blank"
+                class="btn__projets"
                 >Voir le projet <i class="ri-eye-line"></i
               ></a>
             </button>
@@ -359,11 +376,19 @@
           <h2>CONTACTEZ - <span>MOI!!!</span></h2>
 
           <div class="social__contact">
-            <a href="#"><i class="ri-linkedin-fill"></i></a>
-            <a href="#" class="link__social__2"
+            <a
+              href="https://github.com/KwonGee-Lukelo"
+              target="_blank"
+              class="link__social__2"
               ><i class="ri-github-fill"></i
             ></a>
-            <a href="#" class="link__social__3"
+            <a href="in/prosper-kwon-gee-59932b29a" target="_blank"
+              ><i class="ri-linkedin-fill"></i
+            ></a>
+            <a
+              href="https://wa.me/243826002323"
+              class="link__social__3"
+              target="_blank"
               ><i class="ri-whatsapp-line"></i
             ></a>
           </div>
