modification du lien LinkedIn

--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
               class="link__social__2"
               ><i class="ri-github-fill"></i
             ></a>
-            <a href="in/prosper-kwon-gee-59932b29a" target="_blank"
+            <a
+              href="https://www.linkedin.com/in/prosper-kwon-gee-59932b29a"
+              target="_blank"
               ><i class="ri-linkedin-fill"></i
             ></a>
             <a
@@ -382,7 +384,9 @@
               class="link__social__2"
               ><i class="ri-github-fill"></i
             ></a>
-            <a href="in/prosper-kwon-gee-59932b29a" target="_blank"
+            <a
+              href="https://www.linkedin.com/in/prosper-kwon-gee-59932b29a"
+              target="_blank"
               ><i class="ri-linkedin-fill"></i
             ></a>
             <a
