Modification de texte de description des mes projets

--- a/index.html
+++ b/index.html
@@ -153,16 +153,20 @@
         <div class="card__projets__1">
           <div class="head__card__projets__1">
             <img
-              src="assets/images/projets/portfolio.png"
-              alt="interface site web portfolio"
+              src="assets/images/projets/MassyB.png"
+              alt="interface site web vitrine"
             />
           </div>
 
           <div class="body__card__projets__1">
             <p class="body__card__projets__1__description">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
-              eos illum non sequi doloremque, laudantium quaerat, aliquid
-              molestias ut provident laboriosam repellendus eius aperiam veniam?
+              Site vitrine professionnel conçu pour une entreprise de vente de
+              meubles. Ce site présente une interface moderne et fluide, mettant
+              en avant une large gamme de meubles pour différents espaces:
+              salon, bureau, chambre et extérieur. Avec un design responsive et
+              épuré, l'objectif est d'offrir une expérience utilisateur agréable
+              et intuitive, permettant aux visiteurs de naviguer facilement et
+              de passer commande.
             </p>
 
             <div class="tecno">
@@ -173,6 +177,7 @@
               <div class="tecno__logo">
                 <i class="ri-html5-fill"></i>
                 <i class="ri-css3-fill"></i>
+                <i class="ri-bootstrap-fill"></i>
                 <i class="ri-javascript-fill"></i>
               </div>
             </div>
@@ -198,9 +203,12 @@
 
           <div class="body__card__projets__2">
             <p class="body__card__projets__2__description">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
-              eos illum non sequi doloremque, laudantium quaerat, aliquid
-              molestias ut provident laboriosam repellendus eius aperiam veniam?
+              Site vitrine pour un café en ligne, conçu dans le cadre d'un
+              tutoriel. Ce projet présente une interface élégante et simple,
+              offrant une expérience fluide aux utilisateurs qui souhaitent
+              découvrir le menu, consulter les produits disponibles et passer
+              commande. Le design est responsive, permettant une navigation
+              otimalr sur tous les appareils.
             </p>
 
             <div class="tecno">
@@ -236,9 +244,12 @@
 
           <div class="body__card__projets__3">
             <p class="body__card__projets__3__description">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
-              eos illum non sequi doloremque, laudantium quaerat, aliquid
-              molestias ut provident laboriosam repellendus eius aperiam veniam?
+              Todo List une application simple mais fonctionnelle, développée en
+              Javascript pour mettre en pratique mes compétences en
+              développement web. Ce projet permet aux utilisateurs de créer,
+              marquer et supprimer des tâches dans une liste dynamique. Ces
+              projets met en avant mes compétences en Javascript, ainsi que la
+              gestion des événements et la gestion de l'interface utilisateur.
             </p>
 
             <div class="tecno">
